--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Wed Jun 07 10:41:48 GMT 2023
+#Wed Jun 07 10:55:38 GMT 2023
 allow-flight=false
 allow-nether=true
 broadcast-console-to-ops=true
@@ -45,7 +45,7 @@ require-resource-pack=false
 resource-pack=
 resource-pack-prompt=
 resource-pack-sha1=
-server-ip=
+server-ip=0.0.0.0
 server-port=19132
 simulation-distance=10
 spawn-animals=true
