--- a/server.properties
+++ b/server.properties
@@ -9,7 +9,7 @@ enable-query=false
 generator-settings={}
 enforce-secure-profile=true
 level-name=world
-motd=Hiyurin Shelter Server
+motd=A Minecraft Server
 query.port=19132
 pvp=false
 generate-structures=true
